package com.example.workinprogress;
import androidx.core.content.FileProvider;

public class GenericFileProvider extends FileProvider {
}
